--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "dotenv": "^8.1.0",
     "firebase": "^6.6.0",
     "nuxt": "^2.0.0"
   },
@@ -20,6 +19,7 @@
     "@nuxtjs/vuetify": "^1.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "node-sass": "^4.0.0",
     "prettier": "^1.16.4"
   }
 }
