--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "blueimp-load-image": "^2.24.0",
     "dayjs": "^1.8.16",
+    "exif-js": "^2.3.0",
     "firebase": "^6.6.1",
     "nuxt": "^2.0.0",
     "nuxt-webfontloader": "^1.1.0",
