--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "heroku-postbuild": "npm run build"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "blueimp-load-image": "^2.24.0",
     "dayjs": "^1.8.16",
-    "exif-js": "^2.3.0",
     "firebase": "^6.6.1",
     "nuxt": "^2.10.1",
     "nuxt-webfontloader": "^1.1.0",
@@ -28,9 +26,6 @@
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.8.5",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.16.4"
+    "node-sass": "^4.12.0"
   }
 }
