domain, now hosting service

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "now": "now deploy dist/",
+    "deploy": "npm run generate && npm run now"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
