update deploy to now script

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "now": "now deploy dist/",
-    "deploy": "npm run generate && npm run now"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
